system/monitoring/prometheus/alertmanager.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway
  hostnames:
    - alertmanager.domain.example.com
  rules:
    - backendRefs:
        - kind: Service
          name: prometheus-kube-prometheus-alertmanager
          port: 9093
      matches:
        - path:
            type: PathPrefix
            value: /
