system/monitoring/prometheus/grafana.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway
  hostnames:
    - grafana.domain.example.com
  rules:
    - backendRefs:
        - kind: Service
          name: prometheus-grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
