system/monitoring/prometheus/prom.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prom
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway
  hostnames:
    - prom.domain.example.com
  rules:
    - backendRefs:
        - kind: Service
          name: prometheus-kube-prometheus-prometheus
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
